--- a/examples/can-logger/can-logger.yaml
+++ b/examples/can-logger/can-logger.yaml
@@ -20,6 +20,7 @@ esp32:
   flash_size: 4MB
   framework:
     type: esp-idf
+    version: 5.4.1
     sdkconfig_options:
       CONFIG_ESPTOOLPY_FLASHSIZE_4MB: y
 
