remove custom esp32 component dependency

--- a/examples/can-logger/can-logger.yaml
+++ b/examples/can-logger/can-logger.yaml
@@ -8,10 +8,6 @@ external_components:
     # to let logger subscribe to TX events
       - canbus
       - esp32_can
-  - source: "github://asergunov/esphome_esphome@esp32-configuration"
-    # to workaround idf version selection
-    components:
-      - esp32
   - source: "github://asergunov/esphome-can-sniffer"
     components:
       - can_logger
@@ -22,7 +18,8 @@ esp32:
   flash_size: 4MB
   framework:
     type: esp-idf
-    version: 5.4.1 # multiple can interfaces support since 5.2
+    version: 5.3.3 # multiple can interfaces support since 5.2
+    platform_version: 53.3.13
     sdkconfig_options:
       CONFIG_ESPTOOLPY_FLASHSIZE_4MB: y
 
